Fix vertical alignment of table cells.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,16 +28,37 @@ nav.navbar {
   margin-right: 20px;
 }
 
+.tr-balance {
+  font-weight: bold;
+}
+
 .tr-expense {
-  color: red;
+  color: hsl(348, 100%, 61%);
 }
 
 .tr-earning {
-  color: blue;
+  color: hsl(217, 71%, 53%);
+}
+
+.tr-book-delete {
+  color: hsl(348, 100%, 61%);
+}
+
+form.tr-input-field {
+  font-size: 1rem;
+}
+
+#tr-input-price {
+  text-align: right;
+}
+
+.books-content .subtitle {
+  text-decoration: underline;
 }
 
 p.tr-day {
-  font-size: 1.3em;
+  font-size: 1.4em;
+  color: hsl(0, 0%, 21%);
   /* color: grey; */
 }
 
@@ -48,21 +69,32 @@ p.tr-month {
 
 span.tr-expense {
   font-size: 1.3em;
+  color: hsl(348, 100%, 61%);
 }
 
 span.tr-earning {
   font-size: 1.3em;
+  color: hsl(217, 71%, 53%);
 }
 
 .tr-description {
-  /* font-size: 1em; */
-  color: darkgrey;
+  font-style: italic;
+  color: grey;
 }
 
-.tr-delete {
-  /* display: inline-block; */
+table > tbody > tr > td.tr-center {
+  text-align: center;
   vertical-align: middle;
-  /* line-height: normal; */
+}
+
+table > tbody > tr > td.tr-right {
+  text-align: right;
+  vertical-align: middle;
+}
+
+table > tbody > tr > td.tr-left {
+  text-align: left;
+  vertical-align: middle;
 }
 
 html,
@@ -70,7 +102,6 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  /* background-color: #f5f5f5 */
 }
 #wrapper {
   min-height: 100%;
@@ -92,4 +123,5 @@ body {
   bottom: 0;
   left: 0;
   z-index: 1;
+  vertical-align: bottom;
 }
